--- a/client/package.json
+++ b/client/package.json
@@ -3,29 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@popperjs/core": "^2.11.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "autoprefixer": "10.4.5",
-    "bootstrap": "^5.3.3",
-    "jquery": "^3.7.1",
-    "magnific-popup": "^1.1.0",
+    "classnames": "^2.5.1",
+    "moment": "^2.30.1",
+    "nouislider": "^15.7.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.2",
+    "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.2",
-    "sass": "^1.75.0",
-    "slick-carousel": "^1.8.1",
-    "web-vitals": "^2.1.4"
+    "sass": "^1.75.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "compile-sass": "sass src/ClientPanel/assets/scss/paper-kit.scss src/ClientPanel/assets/css/paper-kit.css",
+    "minify-sass": "sass src/ClientPanel/assets/scss/paper-kit.scss src/ClientPanel/assets/css/paper-kit.min.css --style compressed"
   },
   "eslintConfig": {
     "extends": [
@@ -46,6 +44,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "bootstrap": "4.6.2"
   }
 }
