--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "classnames": "^2.5.1",
+    "mdb-ui-kit": "^7.2.0",
     "moment": "^2.30.1",
     "nouislider": "^15.7.1",
     "react": "^18.2.0",
