--- a/server/config/config.json
+++ b/server/config/config.json
@@ -4,7 +4,7 @@
     "username": "root",
     "password": null,
     "database": "fitness_hub",
-    "host": "localhost",
+    "host": "0.0.0.0",
     "dialect": "mysql"
     
   },
